--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,6 +8,6 @@ target 'MyLibTest_Example' do
   target 'MyLibTest_Tests' do
     inherit! :search_paths
 
-    pod 'FBSnapshotTestCase' , '~> 2.1.4'
+   # pod 'FBSnapshotTestCase' , '~> 2.1.4'
   end
 end
